--- a/_pages/bio.html
+++ b/_pages/bio.html
@@ -1,7 +1,9 @@
 ---
-title: About
-permalink: /about
-redirect_from: /pages/about.html
+title: Bio
+permalink: /bio
+redirect_from: 
+  - /pages/about.html
+  - /pages/bio.html
 cover:
   path: /assets/images/eric-bartholomew-maggie-umber-at-cake-2023.jpg
   alt: Maggie Umber with hands on hips, tabling at CAKE posing with magenta line drawings of Bun, Piper and t from Bunworld
